--- a/css/styles.css
+++ b/css/styles.css
@@ -981,7 +981,8 @@ top: 6rem;
     display: flex;
     flex-wrap: wrap;
     gap: 40px;
-    max-width: 1200px;
+    /* max-width: 1200px; */
+    width: 100%;
     margin: 0 auto;
     justify-content: space-between;
 }
