--- a/css/header.css
+++ b/css/header.css
@@ -110,7 +110,17 @@ border-bottom: 1px solid rgba(128, 128, 128, 0.371);
 .custom-header-auth a{
     color: var(--mainColor);
 }
-
+#logout-btn{
+    border: none;
+    outline: none;
+    background-color: var(--mainColor);
+    color: white;
+    padding-inline: 1.5rem;
+    border-radius: 3px;
+}
+#logout-btn:hover{
+    opacity: 0.8;
+}
 /* Main Header */
 .custom-header-main {
     display: flex;
